--- a/docs/weekly/week3-2025-10-17.md
+++ b/docs/weekly/week3-2025-10-17.md
@@ -92,8 +92,9 @@
 ---
 
 ## 7. Action Items
-- [] [Action Item] — **Owner:** [All], **Due:** 2025-10-
-  **
+- [Reproduce Sec-Bench] [Action Item] — **Owner:** [All], **Due:** 2025-10-24
+  ** Try the Claude code and compare it with SWE-Agent, OpenHands, Aider, etc. We want to create
+  a fix rate distribution of CWE based on the types of vulnerability. Visualize the result. Demonstrate the inference examples similar to cybergym/experiments/cybench. **
 
 - [] [Action Item] — **Owner:** [All], **Due:** 2025-10-
   **
