--- a/docs/weekly/week4-2025-10-24.md
+++ b/docs/weekly/week4-2025-10-24.md
@@ -1,25 +1,24 @@
-# Research Sync 2025-10-17
+# Research Sync 2025-10-24
 
 **Attendees:** Caroline Cahill, In Keun Kim, Song Li
 
-**Date:** 2025-10-17
-
+**Date:** 2025-10-24
 ---
 
 ## 1. Summary
 **Current Status:** 🟢 On Track / 🟡 Minor Obstacles / 🔴 Blocked  
 
-🟢 *Finished SEC-Bench documentation and now we understand the pros and cons of cybergym framework. Understood the PoC Verification process in CyberGym.*
+🟢 *Still trying to reproduce the SEC-Bench.*
 
-🟡 *Team members are busy during the midterm season and need better time coordination.*
+🟡 **
 
-🔴 **
+🔴 *We are having disk issues: out of disk quota, slow speed. The Docker images take too much
+space and loading the vulnerabilities dataset from google OSS-FUZZ takes more than 5 hrs.*
 
 ---
 
 ## 2. Key Accomplishments This Week
-- Restructured the online doc for future works and deployed with better domain name.
-- CyberGym PoC verification process understood and SecBench theory documentation completed.
+- We overcame docker image tag bugs, and dataset filtering issues.  
 - 
 
 ---
@@ -63,14 +62,13 @@
 
 ### [Song Li]  
 **Progress**  
-- Restructured the online doc for future works and deployed with better domain name.
-- CompleterCyberGym PoC verification process and SecBench theory documentation..
+- Working on the reproduction.
 
 **Plans for Next Week**  
 - SecBench Reproduction.
 
 **Blockers / Needs**  
-- Two exams next week. Time management is needed.
+- Time management is needed.
 
 ---
 
@@ -92,15 +90,24 @@
 ---
 
 ## 7. Action Items
-- [Reproduce Sec-Bench] [Action Item] — **Owner:** [All], **Due:** 2025-10-24
+- [Reproduce Sec-Bench] [Action Item] — **Owner:** [All], **Due:** 2025-10-31
   Try the Claude code and compare it with SWE-Agent, OpenHands, Aider, etc. We want to create
   a fix rate distribution of CWE based on the types of vulnerability. Visualize the result. Demonstrate the inference examples similar to cybergym/experiments/cybench.
 
+- [] [Action Item] — **Owner:** [All], **Due:** 2025-10-31
+  ** Draft a document detailing issues encountered.
+
+- [] [Action Item] — **Owner:** [All], **Due:** 2025-10-31
+  ** Determine the most cost-effective platform. Calculate expected costs based on weekly working hours.
+
 - [] [Action Item] — **Owner:** [All], **Due:** 2025-10-
   **
 
-- [] [Action Item] — **Owner:** [All], **Due:** 2025-10- 
-  **
+## 8. Progress over the last week to set up SEC-bench
+- [Implementation Overview](https://arise-ai-security.github.io/docs/reviews/sec-bench/implementation/overview)
+- Currently loading a subset of 224 instances out of 738.
+- Goal: Reproduce SEC-bench results with Claude Code.
 
-- [] [Action Item] — **Owner:** [All], **Due:** 2025-10-
-  **
+## 9. Possible Solutions
+1. Configure machines in the lab with around 1 terabyte of storage and test feasibility on one machine.
+2. Use vast.ai to rent GPUs at an affordable rate.
