minor updates to documentation for this week

--- a/docs/weekly/week4-2025-10-24.md
+++ b/docs/weekly/week4-2025-10-24.md
@@ -10,22 +10,23 @@
 
 🟢 *Still trying to reproduce SEC-Bench.*
 
-🟡 **
+🟡 
 
-🔴 *We are having *
+🔴 *We are running into many errors setting up the codebase*
 
 ---
 
 ## 2. Key Accomplishments This Week
 - Downloaded the vulnerabilities dataset from OSS-Fuzz
+  - Moved past this challenge from last week
 - Pivoted to reproducing SEC-Bench entirely on our local machines, rather than in the lab server
 - Moved on from downloading vulnerability instances to getting SecVerifier set up
-  - SecVerifier would allow us to run the agents
+  - SecVerifier is the authors' repository to verify that the instances are reproducible and configured correctly
 ---
 
 ## Blockers / Challenges
 - Trying to run ./run_multi-agent.sh -m 10 -i gpac.cve-2023-5586 -b cve
-- Currently failing
+  - Command is currently failing
 - We first tried to get this running locally, following instructions in Development.md, but this resulted in many errors
 - We pivoted to setting up the docker container, following the very last section of instructions in Development.md. This seemed to be more promising. Even though we ran into many errors, they were more easily fixable. However, we all reached the blocker error 
   “unable to start container process: error during container init: exec: "/openhands/micromamba/bin/micromamba": stat /openhands/micromamba/bin/micromamba: no such file or directory: unknown”
