--- a/docs/weekly/week6-2025-11-07.md
+++ b/docs/weekly/week6-2025-11-07.md
@@ -5,26 +5,36 @@
 **Date:** 2025-11-07
 ---
 
-## 1. Summary
+## Summary
 **Current Status:** 🟢 On Track / 🟡 Minor Obstacles / 🔴 Blocked  
 
-🟢 *Successfully debugged and fixed the SecVerifier, able to reproduce all CVE instances with GPT-4o.*
+🟢 **On Track**: Successfully reproduced SecVerifier results across multiple environments and fixed major integration bugs between the Builder and Exploiter agents.
 
-🟡 *Integration of [Anthropic SDK](https://github.com/anthropics/claude-agent-sdk-python) with the current codespace.*
+🟡 **Minor Obstacles**: Currently investigating degraded GPT-5 performance and BuilderAgent failures in the Claude Code integration.    
 
-🔴 *Not enough computing resources.*
+🔴 **Blocked**: Limited local computational resources significantly slow down large-scale iterations; need higher-spec lab hardware to proceed efficiently.
 
 ---
 
-## 2. Key Accomplishments This Week
-- Fixed internal OpenHands issues and ensured the successful launch of the docker in doccker.
+## Key Accomplishments This Week
+### Fixed Bugs in SecVerifier
+- Fixed bugs regarding environmental variables in the SecVerifier and succeeded reproducing the results for single instance_id. 
 - Debugged the SecBench's integration with the SecVerifier, and fixed the builder agent failures.
 - Debugged the pipeline between builder agent and exploiter agent, and fixed the exploiter agent failures.
+### Reproduced SecVerifier Results 
+* Successfuly reproduced in two separate testing environments: Docker-in-Docker setup and Local machine (MacOS) setup.
 - Reproduced more than 50 CVE instances using GPT-4o and verified the results with the paper data.
-- Experimented with GPT-5's performances, and currently exploring the reason why GPT-5 performed even worse than GPT-4o, particularly at the Builder Agent stage.
-- Experimentetd with Claude Code's performances, and currently actively integrating official Anthropic SDK.
+### Advanced Model Integration (WIP)
+- Experimented with GPT-5's performances, and observed degraded performance compared to GPT-4o.
+	- Currently exploring the reason why GPT-5 performed even worse than GPT-4o, particularly at the Builder Agent stage.
+- Integrated Claude Code with Openhands using Claude Code Agent SDK. 
+	- BuilderAgent fails to build in this setting. Investigating the reason why BuilderAgent is failing.
 ---
 
-## 3. Blockers / Challenges
-- Need more RAM and better CPU to speed up the process. At least 32GB of memory and a CPU better than M2 Max to make the docker run more smoothly.
-- Still no Lab-provided Anthropic account.
+## Blockers / Challenges
+* No need for GPU right now.
+* Limitation of our computational resources.
+	* To generate successful metric, 898 vulnerability instances should be iterated over.
+	* Concurrency option is available, however turning it on consumes more than 80% of RAM and CPU resource on our local machine.
+	* Sequential run consumes too much time. (~3 min for each instance)
+* If Lab computer has good hardware specs, that would be sufficient for now.
