--- a/docs/weekly/week6-2025-11-07.md
+++ b/docs/weekly/week6-2025-11-07.md
@@ -27,8 +27,11 @@
 ### Advanced Model Integration (WIP)
 - Experimented with GPT-5's performances, and observed degraded performance compared to GPT-4o.
 	- Currently exploring the reason why GPT-5 performed even worse than GPT-4o, particularly at the Builder Agent stage.
-- Integrated Claude Code with Openhands using Claude Code Agent SDK. 
+- Integrated Claude Code with Openhands using Claude Code Agent SDK.
 	- BuilderAgent fails to build in this setting. Investigating the reason why BuilderAgent is failing.
+
+**Related:** [SecVerifier Enhancement Brainstorming](./brainstorming/brainstorming-2025-11-07.md)
+
 ---
 
 ## Blockers / Challenges
@@ -38,3 +41,5 @@
 	* Concurrency option is available, however turning it on consumes more than 80% of RAM and CPU resource on our local machine.
 	* Sequential run consumes too much time. (~3 min for each instance)
 * If Lab computer has good hardware specs, that would be sufficient for now.
+
+---
